fix dashboard component alignment

--- a/frontend/src/components/Dashboard.css
+++ b/frontend/src/components/Dashboard.css
@@ -1,5 +1,6 @@
 .dashContainer {
   width: 80%;
+  min-width: 800px;
   margin: auto;
 }
 
@@ -7,7 +8,8 @@
   padding: 0;
   height: 90vh;
   float: left;
-  width: 25%;
+  width: 20vw;
+  min-width: 200px;
 }
 
 #contentContainer {
@@ -16,6 +18,7 @@
   overflow-y: auto;
   background-color: #bebebe;
   float: right;
-  width: 60%;
+  width: 50vw;
+  min-width: 500px;
   box-shadow: 5px 10px 5px #02447a;
 }
